--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <div class="container">
-    Awww yeah
+    <div class="row">
+      <div class="col-sm-4"><div class="menu">Col One</div></div>
+      <div class="col-sm-7 offset-1">Col Two</div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
