Add floating overlap menu

--- a/blog.html
+++ b/blog.html
@@ -14,13 +14,17 @@
 <body>
   <div class="container">
     <div class="row">
-      <header class="col-sm-12"> <h1>TEST</h1></header>
+      <header class="col-sm-12">
+        <img src="./img/vineyardoverpass.jpg" alt="Vineyard Street overpass at night" class="responsive">
+        <h1 class="title">Burning Road</h1></header>
       <div class="col-sm-4">
-        <div class="menu">Col One
+        <div class="menu">
           <h4>TEST</h1>
         </div>
       </div>
-      <div class="col-sm-7 offset-1">Col Two</div>
+      <div class="col-sm-7 offset-1">
+        Mac and Cheese
+      </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
