Make every nav button clickable

--- a/projects.html
+++ b/projects.html
@@ -42,21 +42,21 @@
             <h2>Wendell Yamada</h2>
           </div>
           <nav class="navigation flex-column">
-            <div class="nav-link">
-              <a href="index.html">
+            <a href="index.html">
+              <span class="nav-link">
                 <i class="fa-solid fa-blog"></i>&nbsp; Blog
-              </a>
-            </div>
-            <div class="nav-link active">
-              <a href="projects.html">
+              </span>
+            </a>
+            <a href="projects.html">
+              <span class="nav-link active">
                 <i class="fa-solid fa-laptop-code"></i>&nbsp; Projects
-              </a>
-            </div>
-            <div class="nav-link">
-              <a href="about.html">
+              </span>
+            </a>
+            <a href="about.html">
+              <span class="nav-link">
                 <i class="fa-regular fa-circle-user"></i>&nbsp; About
-              </a>
-            </div>
+              </span>
+            </a>
           </nav>
         </div>
       </div>
